# VK_algo_course

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
Campus/Homeworks/week_1/: Task_1.cpp  Task_2.cpp  Task_3.cpp
Campus/Seminars/week_1/: merge_sorted.cpp  reverse.cpp  shift_evens.cpp
Module_1/Control/: Task_1.cpp
Module_1/Lesson_2/: Task_1.cpp
Module_1/Lesson_4/: Task_1.cpp
Online/Module_1/Lesson_2/: Task_2.cpp
Online/Module_1/Lesson_3/: Task_1.cpp
Online/Module_1/Lesson_4/: Task_2.cpp
include/: week_1.hpp  week_2.hpp  week_3.hpp  week_4.hpp  week_6.hpp  week_7.hpp  week_8.hpp
src/week_1/: w1_tsk1.cpp  w1_tsk2.cpp  w1_tsk3.cpp  week_1.cpp
src/week_2/: w2_tsk1.cpp  w2_tsk2.cpp  week_2.cpp
src/week_3/: w3_tsk1.cpp  w3_tsk2.cpp  week_3.cpp
src/week_4/: week_4.cpp
src/week_6/: w6_tsk1.cpp  week_6.cpp
src/week_7/: week_7.cpp
src/week_8/: week_8.cpp
test/: CMakeLists.txt  tests_week_1.cpp  tests_week_2.cpp  tests_week_3.cpp  tests_week_4.cpp  tests_week_6.cpp  tests_week_7.cpp  tests_week_8.cpp
